Fix template spacing

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -20,7 +20,8 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     # "Programming Language :: Python :: 3.13",  # ? (via myst-nb) https://github.com/crate-py/rpds/issues/72
     # "Programming Language :: Python :: 3.14",  # ? Unreleased (https://peps.python.org/pep-0745)
-]dependencies = []
+]
+dependencies = []
 [project.urls]
 Changes = "https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/changelog.html"
 Docs = "https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}"
