Fix trailing comma

--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -23,7 +23,7 @@
     {
       "id": "ref",
       "type": "promptString",
-      "description": "Commit SHA or other VCS reference.",
+      "description": "Commit SHA or other VCS reference."
     },
     {
       "id": "changeType",
