--- a/template/docs/{{ project_name }}_docs/intersphinx.py.jinja
+++ b/template/docs/{{ project_name }}_docs/intersphinx.py.jinja
@@ -1,5 +1,7 @@
 """Intersphinx URL handlers."""
 
+from __future__ import annotations
+
 from {{ project_name }}_docs.types import IspxMappingValue
 
 
