Run winget more safely and facilitate commit-pinned changelog entries.
Require `exact` and `winget` source, and run winget silently for safter Windows machine initialization. Add task for timestamped ad-hoc/orphan changelog entries.

--- a/template/changelog/towncrier_template.md.jinja.jinja
+++ b/template/changelog/towncrier_template.md.jinja.jinja
@@ -19,7 +19,7 @@ These changes reflect the current [development progress](https://github.com/{% e
 {% for category, val in definitions.items() if category in sections[section] %}
 ### {{ definitions[category]['name'] }}
 
-{% for text, values in sections[section][category].items() %}
+{% for text, values in sections[section][category].items()|reverse %}
 - {{ text }}
 {%- if values %}
 {% if "\n  - " in text or '\n  * ' in text %}
