--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -1,14 +1,21 @@
 """CLI for tools."""
 
 from collections.abc import Collection
+from json import dumps
 from pathlib import Path
 from re import finditer
+from sys import version_info
 
 from cyclopts import App
 
 from {{ project_name }}_tools import add_changes
 from {{ project_name }}_tools.sync import check_compilation, escape
 from {{ project_name }}_tools.types import ChangeType
+
+if version_info >= (3, 11):
+    from tomlkit import loads  # pyright: ignore[reportMissingImports]
+else:
+    from toml import loads  # pyright: ignore[reportMissingImports]
 
 APP = App(help_format="markdown")
 """CLI."""
@@ -53,6 +60,19 @@ def get_actions():
             for match in finditer(r'uses:\s?"?(?P<action>.+)@', contents)
         ])
     log(sorted(set(actions)))
+
+
+@APP.command
+def elevate_pyright_warnings():
+    """Elevate Pyright warnings to errors."""
+    config = loads(Path("pyproject.toml").read_text("utf-8"))
+    pyright = config["tool"]["pyright"]
+    for k, v in pyright.items():
+        if (rule := k).startswith("report") and (_level := v) == "warning":
+            pyright[rule] = "error"
+    Path("pyrightconfig.json").write_text(
+        encoding="utf-8", data=dumps(pyright, indent=2)
+    )
 
 
 def log(obj):
