--- a/template/scripts/{{ project_name }}_tools/sync.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/sync.py.jinja
@@ -17,7 +17,7 @@ from {{ project_name }}_tools.types import Dep, PythonVersion, SubmoduleInfoKind
 if version_info >= (3, 11):  # noqa: UP036, RUF100
     from datetime import UTC  # pyright: ignore[reportAttributeAccessIssue]
 else:
-    from datetime import timezone
+    from datetime import timezone  # pyright: ignore[reportPossiblyUnboundVariable]
 
     UTC = timezone.utc  # noqa: UP017, RUF100
 
