--- a/template/docs/index.md.jinja
+++ b/template/docs/index.md.jinja
@@ -1,6 +1,6 @@
 # {{ project_name }}
 
-[![All Contributors](https://img.shields.io/github/all-contributors/{{ project_owner_github_username }}/{{ github_repo_name }}?color=ee8449&style=flat-square)](../README.md#contributors)
+[![All Contributors](https://img.shields.io/github/all-contributors/{{ project_owner_github_username }}/{{ github_repo_name }}?color=ee8449&style=flat-square)](contributors)
 
 {{ project_description }}.
 
