Try single-sourcing Pylance version

--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -31,7 +31,7 @@ if (!$CI -and (Get-Command -Name 'code' -ErrorAction 'Ignore')) {
     'INSTALLING PYLANCE LOCALLY' | Write-Progress
     $Install = @(
         "--extensions-dir=$LocalExtensions",
-        "--install-extension=$Pylance@$PylanceVersion"
+        "--install-extension=$Pylance@$Env:PYRIGHT_PYTHON_PYLANCE_VERSION"
     )
     code @Install
     $PylanceExtension = Get-ChildItem -Path $LocalExtensions -Filter "$Pylance-*"
