--- a/template/.renovaterc.json.jinja
+++ b/template/.renovaterc.json.jinja
@@ -26,8 +26,8 @@
         "\\.devcontainer/devcontainer\\.json"
       ],
       "matchStrings": [
-        "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+?)'",
-        "ms-python.vscode-pylance@(?<currentValue>.+?)"
+        "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+)'",
+        "ms-python\\.vscode-pylance@(?<currentValue>\\N+)"
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
