--- a/template/.renovaterc.json.jinja
+++ b/template/.renovaterc.json.jinja
@@ -27,7 +27,7 @@
       ],
       "matchStrings": [
         "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+)'",
-        "ms-python\\.vscode-pylance@(?<currentValue>\\N+)"
+        "ms-python\\.vscode-pylance@(?<currentValue>\\S+)"
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
