--- a/template/.renovaterc.json.jinja
+++ b/template/.renovaterc.json.jinja
@@ -22,12 +22,12 @@
       "description": "Pylance",
       "customType": "regex",
       "fileMatch": [
-        "scripts/Initialize-Shell\\.ps1",
-        "\\.devcontainer/devcontainer\\.json"
+        "^scripts/Initialize-Shell\\.ps1$",
+        "^\\.devcontainer/devcontainer\\.json$"
       ],
       "matchStrings": [
         "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+)'",
-        "ms-python\\.vscode-pylance@(?<currentValue>\\S+)"
+        "ms-python\\.vscode-pylance@(?<currentValue>[^\"]+)"
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
