--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -148,7 +148,7 @@ jobs:
       - run: "scripts/Sync-Py.ps1"
       - uses: "jakebailey/pyright-action@3bdde3b31d26f0f1f5de051b1fbd7a536a9a4e7f" # v2.3.1
         with:
-          pylance-version: "${{ env.PYRIGHT_PYTHON_PYLANCE_VERSION }}"
+          pylance-version: "{% raw %}${{ env.PYRIGHT_PYTHON_PYLANCE_VERSION }}{% endraw %}"
   test:
     needs: "sync"
     strategy:
