Make pre-commit verbose

--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -104,14 +104,14 @@
     {
       "label": "task: pre-commit",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pre-commit",
+      "command": ". scripts/Initialize-Shell.ps1; pre-commit --verbose",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
     {
       "label": "task: pre-commit (all)",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pre-commit run --all-files",
+      "command": ". scripts/Initialize-Shell.ps1; pre-commit run --all-files --verbose",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
