Ignore instead of exclude

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -86,7 +86,7 @@ showcontent = true
 
 [tool.pyright]
 stubPath = "submodules/stubs/stubs"
-exclude = ["submodules/**", "bin"]
+ignore = ["submodules/**", "bin"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
