--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -104,7 +104,7 @@
     {
       "label": "task: pre-commit",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pre-commit --verbose",
+      "command": ". scripts/Initialize-Shell.ps1; pre-commit run --verbose",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
