Require docs build to pass before updating lock (Fixes #445)

--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -184,6 +184,7 @@ jobs:
           CODECOV_TOKEN: "{% raw %}${{ secrets.CODECOV_TOKEN }}{% endraw %}"
   lock:
     needs:
+      - "build-docs"
       - "ruff"
       - "fawltydeps"
       - "pyright"
