--- a/template/.github/workflows/high.yml.jinja
+++ b/template/.github/workflows/high.yml.jinja
@@ -136,6 +136,7 @@ jobs:
       - run: "pytest --cov --cov-config=pyproject.toml --cov-report=xml"
   lock:
     needs:
+      - "build-docs"
       - "ruff"
       - "fawltydeps"
       - "pyright"
