--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -45,7 +45,6 @@ deps = ["pyproject.toml"]
 code = ["src"]
 
 [tool.pytest.ini_options]
-# ! https://github.com/pytest-dev/pytest-cov/issues/479#issuecomment-1247444988
 addopts = """
     --strict-config
     --strict-markers
@@ -282,6 +281,10 @@ convention = "numpy"
     "F821", # Allow undefined names, such as `display`
     "S101", # Allow assert
     "T201", # Allow print in notebooks
+]
+"scripts/{{ project_name }}_tools/add_changes.py" = [
+    "S603", # Allow shell expressions here
+    "S607", # Allow shell expressions here
 ]
 "docs/**.ipynb" = [
     "E402", # Need to allow imports below patches in docs notebooks
