--- a/template/scripts/{{ project_name }}_tools/sync.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/sync.py.jinja
@@ -16,7 +16,7 @@ from {{ project_name }}_tools.environment import escape
 from {{ project_name }}_tools.types import Dep, PythonVersion, SubmoduleInfoKind, ops
 
 if version_info >= (3, 11):  # noqa: UP036, RUF100
-    from datetime import UTC
+    from datetime import UTC  # pyright: ignore[reportAttributeAccessIssue]
 else:
     from datetime import timezone
 
