Try ignoring in addition to excluding

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -101,6 +101,7 @@ exclude = [
     "submodules",
     "scripts/install.py",
 ]
+ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
