Re-order Pyright excludes/ignores

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -93,15 +93,15 @@ showcontent = true
 [tool.pyright]
 stubPath = "submodules/stubs/stubs"
 exclude = [
-    "**/node_modules",
-    "**/__pycache__",
-    "**/.*",
-    ".cache",
-    "bin",
-    "submodules",
-    "scripts/install.py",
+  "**/.*",
+  "**/__pycache__",
+  "**/node_modules",
+  ".cache",
+  "bin",
+  "submodules",
+  "scripts/install.py",
 ]
-ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin"]
+ignore = ["**/.*", "**/__pycache__", "**/node_modules", ".cache", "bin"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
